--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "i": "^0.3.7",
+    "mongoose": "^6.0.12",
+    "npm": "^8.1.3",
+    "socket.io": "^4.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
