--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,8 @@
     "@babel/core": "^7.16.0",
     "@babel/node": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
-    "nodemon": "^2.0.15"
+    "jest": "^27.3.1",
+    "nodemon": "^2.0.15",
+    "socket.io-client": "^4.3.2"
   }
 }
