--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/node": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "jest": "^27.3.1",
     "nodemon": "^2.0.15",
